hive/k8s/deploy/deployment-client.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: client
  name: client
  namespace: hive
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - env:
        - name: DB_DRIVER
          value: postgres
        image: localhost:5000/hive:3.1.3
        imagePullPolicy: Always
        name: client
