hive/k8s/deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
  name: hive-ingress
  namespace: hive
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:  
      - backend:
          service:
            name: hiveserver2
            port:
              name: web
        path: /
        pathType: Prefix
    host: hiveserver2.local
