hive/k8s/deploy/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
  name: hive-gateway
  namespace: hive
spec:
  gatewayClassName: traefik
  listeners:
    - name: hiveserver2
      protocol: TCP
      port: 10000
      allowedRoutes:
        namespaces:
          from: Same
    - name: web
      hostname: hiveserver2.localhost
      protocol: HTTPS
      port: 8443
      tls:
        mode: Terminate
        certificateRefs:
          - name: hive-tls
      allowedRoutes:
        namespaces:
          from: Same

---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: hive-tcp
  namespace: hive
spec:
  parentRefs:
    - name: hive-gateway
      sectionName: hiveserver2
      kind: Gateway
  rules:
     - backendRefs:
        - name: hiveserver2
          namespace: hive
          port: 10000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hive-http
  namespace: hive
spec:
  parentRefs:
    - name: hive-gateway
      sectionName: web
      kind: Gateway
  rules:
     - matches:
        - path:
            type: PathPrefix
            value: /
       backendRefs:
        - name: hiveserver2
          namespace: hive
          port: 80
